# extension-cookiecutter-js

./: .gitignore  .travis.yml  README.md  cookiecutter.json
.github/workflows/: main.yml
{{cookiecutter.extension_name}}/: README.md  package.json  setup.py
{{cookiecutter.extension_name}}/lib/: plugin.js
{{cookiecutter.github_project_name}}/: setup.py
{{cookiecutter.python_name}}/: .gitignore  .prettierignore  MANIFEST.in  README.md  package.json  pyproject.toml  setup.py
{{cookiecutter.python_name}}/.github/workflows/: build.yml
{{cookiecutter.python_name}}/binder/: environment.yml
{{cookiecutter.python_name}}/lib/: index.js
