[build-system]
requires = [
    "hatchling>=1.3.1",
    "jupyterlab~=3.1",
]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.python_name }}"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
keywords = [
    "Jupyter",
    "JupyterLab",
    "JupyterLab3",
]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
version = "0.1.0"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "{{ cookiecutter.repository }}"

[tool.hatch.build]
artifacts = [
    "{{ cookiecutter.python_name }}/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"{{ cookiecutter.python_name }}/labextension/static" = "share/jupyter/labextensions/{{ cookiecutter.labextension_name }}/static"
"install.json" = "share/jupyter/labextensions/{{ cookiecutter.labextension_name }}/install.json"
"{{ cookiecutter.python_name }}/labextension/package.json" = "share/jupyter/labextensions/{{ cookiecutter.labextension_name }}/package.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "{{ cookiecutter.python_name }}/labextension/static/style.js",
    "{{ cookiecutter.python_name }}/labextension/package.json",
]
skip-if-exists = [
    "{{ cookiecutter.python_name }}/labextension/static/style.js",
]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_dir = "{{ cookiecutter.python_name }}/labextension"
source_dir = "src"
build_cmd = "install:extension"

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = [
    "jlpm",
]

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml" },
    { src = "{{ cookiecutter.python_name }}/_version.py" },
    { src = "package.json" },
]

[tool.tbump.version]
current = "0.1.0"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[license]
file = "LICENSE"
